move backend to separate folder + minor fix in FE